--- a/examples/index.html
+++ b/examples/index.html
@@ -44,6 +44,7 @@
       { type: 2, 
         content: '', 
         child: [
+          { type: 21, content: '四川', attr: { bold: 1 } },
           { type: 21, content: '成都', attr: { bold: 1 } },
           { type: 21, content: '博普云达', attr: { underline: 1 } },
           { type: 21, content: '科技', attr: { underline: 1, lineThrough: 1 } },
