feat: 键盘事件系统再考虑

--- a/examples/index.html
+++ b/examples/index.html
@@ -48,7 +48,7 @@
           { type: 21, content: '成都', attr: { bold: 1 } },
           { type: 21, content: '博普云达', attr: { underline: 1 } },
           { type: 21, content: '科技', attr: { underline: 1, lineThrough: 1 } },
-          { type: 21, content: '有限公司', attr: { color: '#1cedd1' } }
+          { type: 21, content: '有限公司', attr: { color: 'red' } }
         ]
       }
     ])
