feat: 段落文本样式切换

--- a/examples/index.html
+++ b/examples/index.html
@@ -40,7 +40,7 @@
       }
     })
     Editor.setValue([
-      { type: 1, content: '123' },
+      { type: 1, content: '' },
       { type: 2, 
         content: '', 
         child: [
@@ -49,6 +49,13 @@
           { type: 21, content: '博普云达', attr: { underline: 1 } },
           { type: 21, content: '科技', attr: { underline: 1, lineThrough: 1 } },
           { type: 21, content: '有限公司', attr: { color: 'red' } }
+        ]
+      },
+      { 
+        type: 2,
+        content: '',
+        child: [
+          { type: 21, content: '', attr: {} }
         ]
       }
     ])
