--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
       right: 0;
       top: 0;
       bottom: 0;
-      background-color: #f7f8f9;
+      /*background-color: #f7f8f9;*/
       display: flex;
       align-items: stretch;
       justify-content: center;
@@ -22,6 +22,7 @@
       width: 700px;
       overflow: auto;
       background-color: #fff;
+      /*box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;*/
     }
   </style>
 </head>
@@ -47,6 +48,13 @@
             { type: 'text', content: '公司', attr: { color: 'red' } },
             { type: 'link', content: '博普智库', attr: { url: 'https://zhiku.bopuyun.com' } }
           ]
+        },
+        {
+          type: 'image',
+          content: '这是一张图片',
+          attr: {
+            url: 'https://bpy-store.oss-cn-hangzhou.aliyuncs.com/ppc/d4/d4d3edb8d90b2b894961e1f2ba990dbd/2-%E3%80%90%E8%B5%84%E6%BA%90%E5%B0%81%E5%9B%BE%E3%80%91%E3%80%8A%E5%88%B6%E8%8D%AF%E6%9C%BA%E6%A2%B0%EF%BC%88%E8%AE%BE%E5%A4%87%EF%BC%89%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8C%96%E7%B3%BB%E7%BB%9F%E9%AA%8C%E8%AF%81%E6%8C%87%E5%8D%97%E3%80%8B.jpg@!theme_big'
+          }
         }
       ],
       onChange: (content) => {
