--- a/examples/index.html
+++ b/examples/index.html
@@ -53,12 +53,27 @@
           type: 'image',
           content: '这是一张图片',
           attr: {
-            url: 'https://bpy-store.oss-cn-hangzhou.aliyuncs.com/ppc/d4/d4d3edb8d90b2b894961e1f2ba990dbd/2-%E3%80%90%E8%B5%84%E6%BA%90%E5%B0%81%E5%9B%BE%E3%80%91%E3%80%8A%E5%88%B6%E8%8D%AF%E6%9C%BA%E6%A2%B0%EF%BC%88%E8%AE%BE%E5%A4%87%EF%BC%89%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%8C%96%E7%B3%BB%E7%BB%9F%E9%AA%8C%E8%AF%81%E6%8C%87%E5%8D%97%E3%80%8B.jpg@!theme_big'
+            url: 'https://bpy-store.oss-cn-hangzhou.aliyuncs.com/ppc/0a/0af66421fd053d069f2921092e5a88a8/%E3%80%90App_%E6%8E%A8%E5%B9%BF%E6%9D%A1%E3%80%91%E5%B7%A5%E5%85%B7%E5%88%86%E4%BA%AB%E6%B4%BB%E5%8A%A8.jpg'
+          }
+        },
+        {
+          type: 'table',
+          content: '',
+          attr: {
+            data: [
+              ['表头1', '表头2', '表头3', '表头3', '表头3', '表头3'],
+              ['1-1', '2-1', '3-1', '3-1', '3-1', '3-1'],
+              ['1-2', '2-2', '3-2', '3-1', '3-1', '3-1'],
+              ['1-3', '2-3', '3-3', '3-1', '3-1', '3-1'],
+            ]
           }
         }
       ],
       onChange: (content) => {
         console.log(content)
+      },
+      uploadImage: async () => {
+        return `https://bpy-store.oss-cn-hangzhou.aliyuncs.com/ppc/1d/1d14a90d31fa8946b44836237551d898/%E3%80%90Web_%E8%BD%AE%E6%92%AD%E3%80%91%E5%B7%A5%E5%85%B7%E5%88%86%E4%BA%AB%E6%B4%BB%E5%8A%A8.jpg`
       }
     })
   </script>
