fix: toolbar position adaption

--- a/examples/index.html
+++ b/examples/index.html
@@ -70,7 +70,7 @@
         }
       ],
       onChange: (content) => {
-        console.log(content)
+        // console.log(content)
       },
       uploadImage: async () => {
         return `https://bpy-store.oss-cn-hangzhou.aliyuncs.com/ppc/1d/1d14a90d31fa8946b44836237551d898/%E3%80%90Web_%E8%BD%AE%E6%92%AD%E3%80%91%E5%B7%A5%E5%85%B7%E5%88%86%E4%BA%AB%E6%B4%BB%E5%8A%A8.jpg`
